--- a/CONFIG
+++ b/CONFIG
@@ -1,10 +1,9 @@
-# "set syntax" needed only for tcsh (but works with bash etc)
+# "set"-syntax needed only for tcsh (but works with bash and zsh)
 
 set MSC_ROOT=/opt/MSC
 set MARC_VERSION=2015
 
-set DAMASK_NUM_THREADS=4
+set DAMASK_NUM_THREADS = 4
 
 set ABAQUS_VERSION=6.14-5
-#Set DAMASK_BIN if not $DAMASK_ROOT/bin
-#DAMASK_BIN
+set DAMASK_BIN=${DAMASK_ROOT}/lib
